Bug 114303 - RTF import: Incorrect vertical position of lines
Summary: RTF import: Incorrect vertical position of lines
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:6.1.0 target:6.0.0.1 target:7.4.0
Keywords: bibisected, bisected, filter:rtf, regression
: 114688 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-12-07 09:29 UTC by Xisco Faulí
Modified: 2022-04-13 22:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.0 (31.93 KB, image/png)
2017-12-07 09:29 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-12-07 09:29:44 UTC
Created attachment 138265 [details]
comparison MSO 2010 and LibreOffice 6.0

Steps to reproduce:
1. Open attachment 74674 [details] from bug 60722

Observed behaviour: all lines are drawn at top of the document. See attached image

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 495ac1bc97f3deea8e13cb1a2b9f59d087873c3f
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); Calc: group threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2017-12-07 09:30:46 UTC
Regression introduced by:

author	Michael Stahl <mstahl@redhat.com>	2017-11-02 22:13:32 +0100
committer	Michael Stahl <mstahl@redhat.com>	2017-11-02 22:35:31 +0100
commit c79467ba954987f1d239c594c1e1b3af3f5515f6 (patch)
tree 5138f2c58869a486619bdac51814c0093a5c655f
parent 9a236714e539c772cad7b56caf21dc12b79e77df (diff)
sw: ODF import: default as-char shapes to vertical-pos="top"

Bisected with: bibisect-linux64-6.0

Adding Cc: to Michael Stahl
Comment 2 Xisco Faulí 2017-12-07 09:40:43 UTC
Attachment 66795 [details] from bug 54642 is also affected
Comment 3 Xisco Faulí 2017-12-07 10:28:08 UTC
Attachment 65613 [details] from bug 53556 is also affected
Comment 4 Xisco Faulí 2017-12-07 10:30:03 UTC
and attachment 61947 [details] from bug 48440
Comment 5 Xisco Faulí 2017-12-07 13:18:27 UTC
Increasing severity/priority as this is affecting many documents...
Comment 6 Michael Stahl 2017-12-18 16:46:38 UTC
fixed on master
Comment 7 Commit Notification 2017-12-18 16:48:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=706728df38830536354ba902978cc8297f787dfc

tdf#114303 writerfilter: RTF import: fix default vert orient of shapes

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-12-19 10:34:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=65eb3e3fbcead337eaae694f59d21779b8b00dc5&h=libreoffice-6-0

tdf#114303 writerfilter: RTF import: fix default vert orient of shapes

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2017-12-26 19:14:56 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 2bf1cc7372088ec31ac5f0fb60de57feda59d3b7
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

Thanks Michael!
Comment 10 Michael Stahl 2018-01-03 14:31:49 UTC
*** Bug 114688 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2022-04-13 22:42:45 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/187bf06aabf1b730cfcd47cbdf976f58b4960dcb

tdf#114303: sw_rtfexport4: Add unittest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.